--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 	<body>
 		<div class="header">
-			<h1 style="max-width: 800px">Dasmonto's Arts & Crafts</h1>
+			<h1>Dasmonto's Arts & Crafts</h1>
 		</div>
 
 		<div class="container">
 			<div>
-				<h2 style="background-color: mediumspringgreen;">Brushes</h2>
+				<h2 style="background-color: mediumspringgreen">Brushes</h2>
 				<img src="./Components/hacksaw.jpeg" />
 				<h3>Hacksaw Brushes</h3>
 				<p>
@@ -23,7 +23,7 @@
 			</div>
 
 			<div>
-				<h2 style="background-color: lightcoral;">Frames</h2>
+				<h2 style="background-color: lightcoral">Frames</h2>
 				<img src="./Components/frames.jpeg" />
 				<h3>Art Frames (assorted)</h3>
 				<p>
@@ -35,7 +35,7 @@
 			</div>
 
 			<div>
-				<h2 style="background-color: skyblue;">Paint</h2>
+				<h2 style="background-color: skyblue">Paint</h2>
 				<img src="./Components/finnish.jpeg" />
 				<h3>Clean Finnish Paint</h3>
 				<p>
